@@ -161,7 +161,7 @@ land_skill_limit: 1
 // 2 - Disable skill-failed messages due to can-act delays.
 // 4 - Disable failed message from Snatcher
 // 8 - Disable failed message from Envenom
-display_skill_fail: 0
+display_skill_fail: 2
 
 // Can a player in chat room (in-game), be warped by a warp portal? (Note 1)
 chat_warpportal: no
